# injectionforge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.android  Dockerfile.android-undetect  README.md  build.rs  renovate.json  shell.nix
.cargo/: config.toml
.github/: undetected-frida-patches.patch
.github/workflows/: test.yml
examples/cs/: Example.sln  README.md
examples/cs/My/: MyClass.cs  MyClass.csproj
examples/cs/Other/: OtherClass.cs  OtherClass.csproj
src/: cs.rs  frida_handler.rs  injector.rs  lib.rs  loader_unix.rs  loader_windows.rs  main.rs  win_daemon.rs
tests/mybin/: Cargo.toml
tests/mybin/src/: main.rs
tests/mylib/: Cargo.toml
tests/mylib/src/: lib.rs
tests/simple-c/: .gitignore
