[package]
name = "frida-deepfreeze-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "standalone"
path = "src/main.rs"

[features]
default = ["frida"]
dotnet = ["dep:csbindgen"]
frida = ["dep:frida", "dep:lazy_static", "dep:serde", "dep:serde_json"]

[dependencies]
frida = { version = "0.13.6", features = ["auto-download"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "libloaderapi"] }
windows-sys = { version = "0.52.0", features = ["Win32_System_ClrHosting"], optional = true }

[target.'cfg(unix)'.dependencies]
ctor = "0.2.7"

[build-dependencies]
goblin = "0.8.0"
csbindgen = { version = "1.9.1", optional = true}

[dev-dependencies]
pretty_assertions = "1.4.0"
mylib = { path = "tests/mylib" }
