[package]
name = "injectionforge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "standalone"
path = "src/main.rs"

[features]
default = ["frida", "frida-auto-download"]
frida = ["dep:frida", "dep:lazy_static", "dep:serde", "dep:serde_json"]
frida-auto-download = ["frida/auto-download"]

[dependencies]
frida = { git = "https://github.com/dzervas/frida-rust", branch = "armhf-patches", optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "libloaderapi"] }
windows-sys = { version = "0.52.0", features = [
	"Win32_System_ClrHosting",
], optional = true }

[target.'cfg(unix)'.dependencies]
ctor = "0.2.8"

[build-dependencies]
goblin = "0.9.0"
build-target = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
pretty_assertions = "1.4.0"
mylib = { path = "tests/mylib" }
