[package]
name = "injectionforge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "standalone"
path = "src/main.rs"

[features]
default = ["frida", "frida-auto-download"]
frida = ["dep:frida", "dep:lazy_static", "dep:serde", "dep:serde_json"]
frida-auto-download = ["frida/auto-download"]

[dependencies]
frida = { version = "0.16", optional = true }
lazy_static = { version = "1.5.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "libloaderapi"] }
windows-sys = { version = "0.59", features = [
	"Win32_System_ClrHosting",
], optional = true }

[target.'cfg(unix)'.dependencies]
ctor = "0.4"

[build-dependencies]
goblin = "0.9"
build-target = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
mylib = { path = "tests/mylib" }
